--- a/index.html
+++ b/index.html
@@ -1,72 +1,99 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfólio Gustavo</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans&family=Prosto+One&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Site moderno</title>
 </head>
-<body style="background-color: #11002b;">
-<nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <a href="#" class="navbar-brand">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span style="color: white;" class="navbar-toggler-icon"></span>
-            </button>
+<body>
+    <div class="topnav" id="myTopnav">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
         </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#sobremim">Sobre mim</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tecnologias</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projetos</a>
-              </li>
-            </ul>
+    </div>
+    <div class="head">
+        <div class="container">
+            <h1>Compre seu carro</h1>
+            <br>
+            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, vitae porro. Iusto quasi consectetur cum sapiente eius! Pariatur temporibus necessitatibus dolorem porro sit dignissimos libero. Excepturi amet quibusdam tempore alias!</span>
+            <br>
+            <br>
+            <button type="submit">Contato</button>
+        </div>
+        <div class="diagonal"></div>
+        <!--<img src="https://i2-prod.lincolnshirelive.co.uk/whats-on/whats-on-news/article192761.ece/ALTERNATES/s1200b/Ferrari-Belvior.jpg">-->
+    </div>
+    <div class="section">
+        <h1>Por que somos diferenciados?</h1>
+        <div class="icons" data-aos="fade-right">
+            <div class="box">
+                <span class="material-symbols-outlined">settings</span>
+                <h2>Somos qualificados</h2>
+            </div>
+            <div class="box">
+                <span class="material-symbols-outlined">settings</span>
+                <h2>Limpamos seu carro</h2>
+            </div>
+            <div class="box">
+                <span class="material-symbols-outlined">settings</span>
+                <h2>Não atrasamos</h2>
+            </div>
+            <div class="box">
+                <span class="material-symbols-outlined">settings</span>
+                <h2>Velozes como um foguete</h2>
+            </div>
         </div>
     </div>
-</nav>
-<div style="padding-right:0; padding-left:0; margin-right:auto; margin-left:auto; margin-top: 50px;" class="container-fluid row" data-aos="fade-up">
-  <div class="col-lg-6 col-sm-12 text-center">
-    <img class="profile img-fluid" src="https://jayesi.github.io/gustavo.jpg" alt="">
-  </div>
-  <div class="col-lg-6 col-sm-12 align-self-center" style="color: rgb(120, 0, 206);">
-    <h1>Gustavo Rodrigues</h1>
-    <h4 style="color: white;" class="fw-light">Front-end Developer</h4>
-  </div>
-</div>
-<div class="sobremim text-center" style="color: rgb(120, 0, 206);" data-aos="fade-up" id="sobremim">
-  <h2 class="fw-bold">Sobre mim</h2>
-  <h4 class="fw-light text-white">17 anos, técnico em informática para a internet pelo IFNMG, domino tecnologias front-end HTML,CSS,JS,BOOTSTRAP especializado em criação de páginas estáticas e dinâmicas</h4>
-</div>
-<div class="container-fluid text-center" style="margin-top: 200px;" data-aos="fade-up">
-  <h1 style="color: rgb(120, 0, 206);">Meus projetos</h1>
-</div>
-<br>
-<br>
-<br>
-<div class="card bg-dark text-light mx-auto" style="width: 18rem;">
-  <img src="sitemoderno.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Site moderno</h5>
-    <p class="card-text">Site moderno que projetei para ser apenas um trabalho a mostra.</p>
-    <a href="projeto-2/index.html" class="btn btn-primary">Ir ao site</a>
-  </div>
-</div>
+    <div class="fixed"></div>
+    <div class="flexbox">
+        <div class="text-box" data-aos="fade-right">
+            <h1>Título do texto</h1>
+            <hr>
+            <br>
+            <span>O Doutor Bruno Leandro Dias, OAB/SP 331.739, Pós Graduado em Direito Penal, Processo Penal E Criminologia pela PUC, em conjunto com uma equipe especializada na área criminal, busca oferecer atendimento de excelência aos seus clientes, com a máxima urgência que os casos criminais necessitam, sempre trazendo informações aos familiares dos envolvidos com muita seriedade e paciência, pois sabemos que nessas horas as famílias dos nossos clientes passam por momentos de angústia.
+            <br>
+            <br>
+            O escritório é sediado na cidade de São Paulo, porém a atuação dos profissionais pode ter abrangência em todo o território
+            nacional, tanto em crimes estaduais, quanto nos crimes federais.
+            <br>
+            <br> 
+            Minha missão é foco na busca da melhor solução.</span>
+        </div>
+        <div class="image-box" data-aos="fade-left">
+            <img src="mecanica.webp">
+        </div>
+    </div>
+    <div class="rodape">
+        <div class="container-foot">
+            <div class="box-foot"><span class="material-symbols-outlined">home</span><p>Facebook</p></div>
+            <div class="box-foot"><i></i><p>Whatsapp</p></div>
+            <div class="box-foot"><i></i><p>Endereço</p></div>
+        </div>
+    </div>
 
-</div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
-  AOS.init();
+AOS.init();
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
 </script>
 </body>
 </html>
